recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:1: error: not found: value levels
  if (levels==0) {
      ^Sierpinski:8: error: not found: value levels
    sierpinski(levels-1,length/2)
               ^Sierpinski:10: error: not found: value levels
    sierpinski(levels-1,length/2)
               ^Sierpinski:12: error: not found: value levels
    sierpinski(levels-1,length/2)
               ^