recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if (levels==0) {
    avance(length)
    right(60)
    avance(length)
    right(60)
    avance(length)
  } else {
    sierpinski(levels-1,length/2)
    right(60)
    sierpinski(levels-1,length/2)
    right(60)
    sierpinski(levels-1,length/2)
    right(60)
  }
}